--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ div {
   display: block;
   position: inherit;
   margin: inherit;
-  max-width: 700px;
+  max-width: inherit;
   color: white;
 }
 
