--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,7 @@
 @font-face {
 font-family: "Oroban-Elegans";
 src: url("css/fonts/Oroban-Elegans.woff");
-src:
-url("css/fonts/Oroban-Elegans.woff") format("woff"),
-url("css/fonts/Oroban-Elegans.otf") format("opentype"),
+font-style: normal;
 }
 
 @font-face {
