--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
 font-family: "Oroban-Elegans";
-src: url("css/fonts/Oroban-Elegans.woff");
+src: url("fonts/Oroban-Elegans.woff");
 font-style: normal;
 }
 
@@ -8,24 +8,24 @@ font-style: normal;
 font-family: "Oroban-ElegansItalic";
 src: url("css/fonts/Oroban-ElegansItalic.otf");
 src:
-url("css/fonts/Oroban-ElegansItalic.woff") format("woff"),
-url("css/fonts/Oroban-ElegansItalic.otf") format("opentype"),
+url("fonts/Oroban-ElegansItalic.woff") format("woff"),
+url("fonts/Oroban-ElegansItalic.otf") format("opentype"),
 }
 
 @font-face {
 font-family: "Inferi-Light";
-src: url("css/fonts/Inferi-Light.otf");
+src: url("fonts/Inferi-Light.otf");
 src:
-url("css/fonts/Inferi-Light.woff") format("woff"),
-url("css/fonts/Inferi-Light.otf") format("opentype"),
+url("fonts/Inferi-Light.woff") format("woff"),
+url("fonts/Inferi-Light.otf") format("opentype"),
 }
 
 @font-face {
 font-family: "Inferi-LightItalic";
-src: url("css/fonts/Inferi-LightItalic.otf");
+src: url("fonts/Inferi-LightItalic.otf");
 src:
-url("css/fonts/Inferi-LightItalic.woff") format("woff"),
-url("css/fonts/Inferi-LightItalic.otf") format("opentype"),
+url("fonts/Inferi-LightItalic.woff") format("woff"),
+url("fonts/Inferi-LightItalic.otf") format("opentype"),
 }
 
 
