--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,9 @@ div {
 
   display: block;
   max-width: justify;
-  position: static;
-  left: auto;
-  width: justify;
+  position: inherit;
+  left: 200px;
+  width: auto;
 
 }
 
@@ -67,8 +67,7 @@ div {
   display: flex;
   position: fixed;
   top: 10px;
-  left: 300px;
-  width: justify;
+  width: 200px;
 
 }
 
