--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
+
 @font-face {
 font-family: "Oroban-Elegans";
 src: url("fonts/Oroban-Elegans.woff");
-font-style: normal;
+src:
+url("fonts/Oroban-ElegansItalic.ttf") format("truetype"),
+url("fonts/Oroban-ElegansItalic.woff2") format("woff2"),
+url("fonts/Oroban-ElegansItalic.otf") format("opentype"),
+
 }
 
 @font-face {
@@ -9,7 +14,10 @@ font-family: "Oroban-ElegansItalic";
 src: url("css/fonts/Oroban-ElegansItalic.otf");
 src:
 url("fonts/Oroban-ElegansItalic.woff") format("woff"),
+url("fonts/Oroban-ElegansItalic.woff2") format("woff"),
 url("fonts/Oroban-ElegansItalic.otf") format("opentype"),
+url("fonts/Oroban-ElegansItalic.ttf") format("truetype"),
+
 }
 
 @font-face {
@@ -18,6 +26,8 @@ src: url("fonts/Inferi-Light.otf");
 src:
 url("fonts/Inferi-Light.woff") format("woff"),
 url("fonts/Inferi-Light.otf") format("opentype"),
+url("fonts/Inferi-Light.ttf") format("truetype"),
+
 }
 
 @font-face {
@@ -25,6 +35,8 @@ font-family: "Inferi-LightItalic";
 src: url("fonts/Inferi-LightItalic.otf");
 src:
 url("fonts/Inferi-LightItalic.woff") format("woff"),
+url("fonts/Inferi-LightItalic.woff2") format("woff2"),
+url("fonts/Inferi-Light.ttf") format("truetype")
 url("fonts/Inferi-LightItalic.otf") format("opentype"),
 }
 
@@ -47,7 +59,7 @@ div {
   display: block;
   position: inherit;
   margin: inherit;
-  max-width: inherit;
+  max-width: 400px;
   color: white;
 }
 
@@ -175,11 +187,13 @@ div {
 
 }
 
-.wingdings{
-    font-family: wingdings;
-    font-size: 30px;
+.font6{
+    font-family: Inferi-Light;
+    font-size: 18px;
 
 }
+
+
 
 .foot{
     font-family: Oroban-Elegans;
@@ -187,6 +201,6 @@ div {
 
 }
 p{
-  font-family: Inferi-Light;
-  font-size: 30px;
+  font-family: oroban-Elegans;
+  font-size: 18px;
 }
