--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 @font-face {
 font-family: "Oroban-Elegans";
-src: url("Oroban-Elegans.woff");
+src: url("Oroban-Elegans.ttf");
 src:
 url("Oroban-Elegans.ttf") format("truetype"),
 url("Oroban-Elegans.woff2") format("woff2"),
