--- a/css/style.css
+++ b/css/style.css
@@ -3,41 +3,41 @@
 font-family: "Oroban-Elegans";
 src: url("Oroban-Elegans.ttf");
 src:
-url("Oroban-Elegans.ttf") format("truetype"),
-url("Oroban-Elegans.woff2") format("woff2"),
-url("Oroban-Elegans.otf") format("opentype"),
+url("https://hapworth.studio/fonts/Oroban-Elegans.woff") format("woff"),
+url("https://hapworth.studio/fonts/Oroban-Elegans.woff2") format("woff2"),
+url("https://hapworth.studio/fonts/Oroban-Elegans.otf") format("opentype"),
 
 }
 
 @font-face {
 font-family: "Oroban-ElegansItalic";
-src: url("css/fonts/Oroban-ElegansItalic.otf");
+src: url("https://hapworth.studio/fonts/Oroban-ElegansItalic.otf");
 src:
-url("fonts/Oroban-ElegansItalic.woff") format("woff"),
-url("fonts/Oroban-ElegansItalic.woff2") format("woff"),
-url("fonts/Oroban-ElegansItalic.otf") format("opentype"),
-url("fonts/Oroban-ElegansItalic.ttf") format("truetype"),
+url("https://hapworth.studio/fonts/Oroban-ElegansItalic.woff") format("woff"),
+url("https://hapworth.studio/fonts/Oroban-ElegansItalic.woff2") format("woff"),
+url("https://hapworth.studio/fonts/Oroban-ElegansItalic.otf") format("opentype"),
+url("https://hapworth.studio/fonts/Oroban-ElegansItalic.ttf") format("truetype"),
 
 }
 
 @font-face {
 font-family: "Inferi-Light";
-src: url("fonts/Inferi-Light.otf");
+src: url("https://hapworth.studio/fonts/Inferi-Light.otf");
 src:
-url("fonts/Inferi-Light.woff") format("woff"),
-url("fonts/Inferi-Light.otf") format("opentype"),
-url("fonts/Inferi-Light.ttf") format("truetype"),
+url("https://hapworth.studio/fonts/Inferi-Light.woff") format("woff"),
+url("https://hapworth.studio/fonts/Inferi-Light.otf") format("opentype"),
+url("https://hapworth.studio/fonts/Inferi-Light.ttf") format("truetype"),
 
 }
 
 @font-face {
 font-family: "Inferi-LightItalic";
-src: url("fonts/Inferi-LightItalic.otf");
+src: url("https://hapworth.studio/fonts/Inferi-LightItalic.otf");
 src:
-url("fonts/Inferi-LightItalic.woff") format("woff"),
-url("fonts/Inferi-LightItalic.woff2") format("woff2"),
-url("fonts/Inferi-Light.ttf") format("truetype")
-url("fonts/Inferi-LightItalic.otf") format("opentype"),
+url("https://hapworth.studio/fonts/Inferi-LightItalic.woff") format("woff"),
+url("https://hapworth.studio/fonts/Inferi-LightItalic.woff2") format("woff2"),
+url("https://hapworth.studio/fonts/Inferi-Light.ttf") format("truetype")
+url("https://hapworth.studio/fonts/Inferi-LightItalic.otf") format("opentype"),
 }
 
 
